# photo-calibrator

./: .coverage  .gitignore  AGENTS.md  README.md  STATUS.md  color-cast-methodology.md  color_cast_calibrator.py  color_cast_detector.py  package-lock.json  package.json  pyproject.toml
.github/workflows/: package-macos.yml  smoke.yml
.hermes/merge-notes/: phase2-phase3-merge.md
.hermes/plans/: 2026-05-28_223844-image-io-hdr-export-phase2.md  2026-05-28_230946-agentd-backend-pipeline.md  2026-05-29_103000-skin-detection-robustness.md  2026-05-29_110000-film-scan.md
docs/: performance-analysis-2026-07-02.md
frontend/: README.md  index.html  next.config.mjs  package-lock.json  package.json  screenshot.mjs  tsconfig.app.tsbuildinfo  tsconfig.node.tsbuildinfo  vite.config.js  vite.config.ts
frontend/assets/: app-icon.icns
frontend/electron/: README.md  backendSupervisor.mjs  main.mjs  (+1 more)
packaging/: backend_entry.py  photo-calibrator-backend.spec
scripts/: dev-electron.mjs  generate_app_icon.py  logFilters.mjs  package_backend_mac.sh  smoke_generated_images.py
tests/: test_accelerator.py  test_accelerator_benchmark_cli.py  test_ai_evaluator.py  test_calibration.py  test_cast_detection.py  test_cli_smoke.py  test_film_scan.py  test_image_io.py  test_oiio_ocio.py  test_performance_monitor.py  test_pillow_access.py  test_pipeline.py  test_plugin_manager.py  test_schemas.py  test_service_compatibility.py  test_simple_server_api.py  test_workspace_db.py
web/: app.js  dom.js  extensions.js  i18n.js  index.html  panel-extensions.js  store.js  styles.css  ui-config.js
(+217 files in other folders)
